2015-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Remove
	unneeded, almost certainly never used, and potentially insecure
	use of mkstemp().  Will quiet Coverity 10315 "Insecure temporary
	file".

2015-04-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Keep Ghostscript gibberish from appearing in
	Configure output.

	* coders/miff.c (WriteRunlengthPacket): Quiet Coverity 10186 and
	10214 "Missing break in switch".

	* magick/pixel_cache.c (GetCacheInfo): Quiet Coverity 10208 "Data
	race condition".

	* magick/blob.c (CloneBlobInfo): Quiet Coverity 10188 "Data race
	condition".
	(GetBlobInfo): Quiet Coverity 10191 "Data race condition".

	* magick/image.c (AllocateImage): Quiet Coverity 10196 "Data race
	condition".
	(CloneImage): Quiet Coverity 10206 "Data race condition".

	* magick/map.c (MagickMapAllocateMap): Quiet Coverity 10192, 10193
	and 10228 "Data race condition".

	* configure.ac: Use an algorithm to try to discover the best value
	for GSCMYKDevice.

	* VisualMagick/bin/delegates.mgk: Recipe for 'gs-cmyk' contained a
	typo which breaks using '-type ColorSeparation'.

	* coders/pwp.c (ReadPWPImage): Fix Coverity CID 64491 "Integer
	handling issues".

2015-04-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (load_tile_rle): Quiet Coverity 10259 "Untrusted
	loop bound".

	* coders/sct.c (ReadSCTImage): Quiet Coverity 10285 "Untrusted
	loop bound".

	* coders/pwp.c (ReadPWPImage): Quiet Coverity 10299 "Untrusted
	loop bound".

	* coders/pcd.c (ReadPCDImage): Quiet Coverity 10301 "Untrusted
	loop bound".

	* coders/tga.c (ReadTGAImage): Quiet Coverity 53418 "Untrusted
	loop bound".

	* wand/magick_compat.c (ParseGeometry): Fix overlap strcpy() in
	dead code.  Quiets Coverity 10078 "Overlapping buffer in memory
	copy" and 10248 "Copy into fixed size buffer".

	* magick/segment.c (Classify): Fix Coverity 64317 "Resource leak".
